Bug 167405 - crash collapse a heading
Summary: crash collapse a heading
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.4.3 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.8.3 target:25...
Keywords:
Depends on:
Blocks: Navigator Crash
  Show dependency treegraph
 
Reported: 2025-07-07 01:00 UTC by jack maney
Modified: 2025-10-01 11:08 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
my document on which Writer crashes (182.14 KB, application/vnd.oasis.opendocument.text)
2025-07-07 01:07 UTC, jack maney
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jack maney 2025-07-07 01:00:17 UTC
Description:
your web site never loaded  https://crashreport.libreoffice.org/stats/crash_details/79fe5fb1-ff0b-41d6-87d0-faae5a387d5b
How can I say which ver of LO while it has crashed again? 24.8 is all I can see

Steps to Reproduce:
1.Open my Writer file 
2.Try to collapse a heading
3. It crashes immediately

Actual Results:
It closes immediately, no msg. 
When I try again I get the crash report msg. But the report is not there.
BTW it is very upsetting that the user can't copy text out of that msg.

Expected Results:
should not crash, but if so provide the report on your web site.
login for that also should have been = my LO login.
Your entire bug process is much too hard. Even for an old-time PC jock. Now I am just trying to write a novel and have no time for crashes.


Reproducible: Always


User Profile Reset: No

Additional Info:
How do you think I can see that when it just crashed and I am trying to see the bug report?
Version: 25.2.4.3 (X86_64) / LibreOffice Community
Build ID: 33e196637044ead23f5c3226cde09b47731f7e27
CPU threads: 2; OS: Windows 10 X86_64 (10.0 build 19045); UI render: default; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

LO Writer must hate my .dot files because it has crashed or lost text so many times. Not just now. It must not crash on files it created.

FYI your help does not tell me what is in my user profile. NO WAY I would reset my profile if that loses my .dic, preferences, etc. 

I tried restarting in safe mode, but that disabled folding headings, which is what created the crash. So I can't recreate it to see if it is gone.
Comment 1 jack maney 2025-07-07 01:07:18 UTC
Created attachment 201680 [details]
my document on which Writer crashes
Comment 2 jack maney 2025-07-07 01:08:55 UTC
The real goal is to stop crashing on my file, but I could not even open the crash report on your site.
Comment 3 BogdanB 2025-07-07 04:22:21 UTC
Some observations:
- it seems you are using 25.2.4 from that bug report
- you are using .doc for your documents (is a binary file format used by Microsoft Word for storing documents. History: It was the standard format for Word versions up to 2003. We are in 2025)
- please give me some details how to reproduce your bug, for example I dont understand how can I colapse your headings....
Comment 4 Telesto 2025-07-07 13:35:18 UTC
This bug sounds pretty similar to bug 166713
Comment 5 jack maney 2025-07-11 22:54:50 UTC
The attached file may have started as an .rtf, but for a couple of years has been in *Writer .dot format only*. Never .doc. I don't even have MS Word available.
Makes me wonder what is going on in the file.
The crashes occurred with  
Options | LibreOffice Writer | View | Outline Folding 
set to: show outline folding buttons, Include sub levels
And with the Styles pulldown removed from the Formatting toolbar next to the Font pulldown.
The file uses paragraph folding to collapse some sections while I work on others. You will see some sections folded (minimized, collapsed) ending with Games.  Then Warps which is expanded. Crashes occurred when I clicked to the left of the word Warps to fold (collapse) it.
This happened up to a dozen times and sent a crash report every time.

I later tried some more things to use my file, including showing the Styles pulldown. Now my file seems OK again. Go figure.
Comment 6 raal 2025-07-12 05:00:18 UTC
No crash in Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 20667acbca5df17771a3581632a672d5db4e751b
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 7 Jim Raykowski 2025-09-27 20:42:00 UTC
I can repro the crash only when the Navigator is open.

Seems something bad happens during this call:

#75 SwCursorShell::GetContentAtPos(Point const&, SwContentAtPos&, bool, SwRect*) at /home/lo/Dev/LO1/sw/source/core/crsr/crstrvl.cxx:1519 (discriminator 2)

Backtrace of the crash:

Fatal exception: Signal 6
Stack:
#0 sal::backtrace_get(unsigned int) at /home/lo/Dev/LO1/sal/osl/unx/backtraceapi.cxx:42 (discriminator 1)
#1 (anonymous namespace)::printStack(int) at /home/lo/Dev/LO1/sal/osl/unx/signal.cxx:289
#2 (anonymous namespace)::callSystemHandler(int, siginfo_t*, void*) at /home/lo/Dev/LO1/sal/osl/unx/signal.cxx:330
#3 (anonymous namespace)::signalHandlerFunction(int, siginfo_t*, void*) at /home/lo/Dev/LO1/sal/osl/unx/signal.cxx:427
#4 __restore_rt at libc_sigaction.c:?
#5 __pthread_kill_implementation at ./nptl/./nptl/pthread_kill.c:44 (discriminator 1)
#6 __GI_raise at ./signal/../sysdeps/posix/raise.c:27
#7 __GI_abort at ./stdlib/./stdlib/abort.c:81
#8 _nl_load_domain at ./intl/./intl/loadmsgcat.c:1177
#9 __assert_fail in /lib/x86_64-linux-gnu/libc.so.6
#10 SwLayAction::FormatContent(SwPageFrame*)::{lambda()#1}::operator()() const at /home/lo/Dev/LO1/sw/source/core/layout/layact.cxx:1739
#11 comphelper::ScopeGuard<SwLayAction::FormatContent(SwPageFrame*)::{lambda()#1}>::~ScopeGuard() at /home/lo/Dev/LO1/include/comphelper/scopeguard.hxx:66
#12 SwLayAction::FormatContent(SwPageFrame*) at /home/lo/Dev/LO1/sw/source/core/layout/layact.cxx:2004
#13 SwLayAction::InternalAction(OutputDevice*) at /home/lo/Dev/LO1/sw/source/core/layout/layact.cxx:623 (discriminator 1)
#14 SwLayAction::Action(OutputDevice*) at /home/lo/Dev/LO1/sw/source/core/layout/layact.cxx:399
#15 SwViewShell::ImplEndAction(bool) at /home/lo/Dev/LO1/sw/source/core/view/viewsh.cxx:349
#16 SwViewShell::EndAction(bool) at /home/lo/Dev/LO1/sw/source/core/view/viewsh.cxx:296
#17 SwCursorShell::EndAction(bool) at /home/lo/Dev/LO1/sw/source/core/crsr/crsrsh.cxx:268
#18 SwView::OuterResizePixel(Point const&, Size const&) at /home/lo/Dev/LO1/sw/source/uibase/uiview/viewport.cxx:1128
#19 SfxViewFrame::DoAdjustPosSizePixel(SfxViewShell*, Point const&, Size const&, bool) at /home/lo/Dev/LO1/sfx2/source/view/viewfrm.cxx:2226
#20 SfxViewFrame::Resize(bool) at /home/lo/Dev/LO1/sfx2/source/view/viewfrm.cxx:3022 (discriminator 2)
#21 SfxFrameViewWindow_Impl::Resize() at /home/lo/Dev/LO1/sfx2/source/view/viewfrm2.cxx:71
#22 vcl::Window::ImplCallResize() at /home/lo/Dev/LO1/vcl/source/window/event.cxx:532
#23 vcl::Window::ImplPosSizeWindow(long, long, long, long, PosSizeFlags) at /home/lo/Dev/LO1/vcl/source/window/window.cxx:1629
#24 vcl::Window::setPosSizePixel(long, long, long, long, PosSizeFlags) at /home/lo/Dev/LO1/vcl/source/window/window.cxx:2798
#25 vcl::Window::SetPosSizePixel(Point const&, Size const&) at /home/lo/Dev/LO1/vcl/source/window/window2.cxx:1356
#26 SfxFrame::SetToolSpaceBorderPixel_Impl(SvBorder const&) at /home/lo/Dev/LO1/sfx2/source/view/frame.cxx:576 (discriminator 1)
#27 SfxWorkWindow::ArrangeChildren_Impl(bool) at /home/lo/Dev/LO1/sfx2/source/appl/workwin.cxx:685
#28 LayoutManagerListener::layoutEvent(com::sun::star::lang::EventObject const&, short, com::sun::star::uno::Any const&) at /home/lo/Dev/LO1/sfx2/source/appl/workwin.cxx:280
#29 framework::LayoutManager::implts_notifyListeners(short, com::sun::star::uno::Any const&) at /home/lo/Dev/LO1/framework/source/layoutmanager/layoutmanager.cxx:2593
#30 framework::LayoutManager::implts_updateUIElementsVisibleState(bool) at /home/lo/Dev/LO1/framework/source/layoutmanager/layoutmanager.cxx:762
#31 framework::LayoutManager::windowHidden(com::sun::star::lang::EventObject const&) at /home/lo/Dev/LO1/framework/source/layoutmanager/layoutmanager.cxx:2689
#32 WindowListenerMultiplexer::windowHidden(com::sun::star::lang::EventObject const&) at /home/lo/Dev/LO1/toolkit/source/helper/listenermultiplexer.cxx:68 (discriminator 79)
#33 VCLXWindow::ProcessWindowEvent(VclWindowEvent const&) at /home/lo/Dev/LO1/toolkit/source/awt/vclxwindow.cxx:493
#34 VCLXWindow::WindowEventListener(VclWindowEvent&) at /home/lo/Dev/LO1/toolkit/source/awt/vclxwindow.cxx:386
#35 VCLXWindow::LinkStubWindowEventListener(void*, VclWindowEvent&) at /home/lo/Dev/LO1/toolkit/source/awt/vclxwindow.cxx:380
#36 Link<VclWindowEvent&, void>::Call(VclWindowEvent&) const at /home/lo/Dev/LO1/include/tools/link.hxx:105
#37 vcl::Window::CallEventListeners(VclEventId, void*) at /home/lo/Dev/LO1/vcl/source/window/event.cxx:257 (discriminator 2)
#38 vcl::Window::ImplResetReallyVisible() at /home/lo/Dev/LO1/vcl/source/window/stacking.cxx:729
#39 vcl::Window::ImplResetReallyVisible() at /home/lo/Dev/LO1/vcl/source/window/stacking.cxx:742
#40 vcl::Window::Show(bool, ShowFlags) [clone .localalias] at /home/lo/Dev/LO1/vcl/source/window/window.cxx:2233
#41 vcl::Window::Show(bool, ShowFlags) [clone .localalias] at /home/lo/Dev/LO1/vcl/source/window/window.cxx:2211
#42 VCLXWindow::setVisible(unsigned char) at /home/lo/Dev/LO1/toolkit/source/awt/vclxwindow.cxx:969
#43 (anonymous namespace)::lcl_changeVisibility(com::sun::star::uno::Reference<com::sun::star::frame::XFramesSupplier> const&, bool) at /home/lo/Dev/LO1/framework/source/services/autorecovery.cxx:2767
#44 (anonymous namespace)::AutoRecovery::implts_changeAllDocVisibility(bool) at /home/lo/Dev/LO1/framework/source/services/autorecovery.cxx:2774
#45 (anonymous namespace)::AutoRecovery::implts_prepareEmergencySave() at /home/lo/Dev/LO1/framework/source/services/autorecovery.cxx:3753
#46 (anonymous namespace)::AutoRecovery::implts_dispatch((anonymous namespace)::DispatchParams const&) at /home/lo/Dev/LO1/framework/source/services/autorecovery.cxx:1458
#47 (anonymous namespace)::AutoRecovery::dispatch(com::sun::star::util::URL const&, com::sun::star::uno::Sequence<com::sun::star::beans::PropertyValue> const&) at /home/lo/Dev/LO1/framework/source/services/autorecovery.cxx:1402
#48 svx::DocRecovery::RecoveryCore::doEmergencySavePrepare() at /home/lo/Dev/LO1/svx/source/dialog/docrecovery.cxx:304
#49 svx::DocRecovery::SaveDialog::SaveDialog(weld::Window*, svx::DocRecovery::RecoveryCore*) at /home/lo/Dev/LO1/svx/source/dialog/docrecovery.cxx:586
#50 (anonymous namespace)::RecoveryUI::impl_doEmergencySave() at /home/lo/Dev/LO1/svx/source/unodraw/recoveryui.cxx:254 (discriminator 3)
#51 (anonymous namespace)::RecoveryUI::dispatchWithReturnValue(com::sun::star::util::URL const&, com::sun::star::uno::Sequence<com::sun::star::beans::PropertyValue> const&) at /home/lo/Dev/LO1/svx/source/unodraw/recoveryui.cxx:148 (discriminator 1)
#52 desktop::(anonymous namespace)::impl_callRecoveryUI(bool, bool) at /home/lo/Dev/LO1/desktop/source/app/app.cxx:1061 (discriminator 5)
#53 desktop::Desktop::Exception(ExceptionCategory) at /home/lo/Dev/LO1/desktop/source/app/app.cxx:1216 (discriminator 1)
#54 VCLExceptionSignal_impl(void*, oslSignalInfo*) at /home/lo/Dev/LO1/vcl/source/app/svmain.cxx:178
#55 callSignalHandler(oslSignalInfo*) at /home/lo/Dev/LO1/sal/osl/all/signalshared.cxx:47 (discriminator 1)
#56 (anonymous namespace)::signalHandlerFunction(int, siginfo_t*, void*) at /home/lo/Dev/LO1/sal/osl/unx/signal.cxx:423 (discriminator 1)
#57 __restore_rt at libc_sigaction.c:?
#58 __pthread_kill_implementation at ./nptl/./nptl/pthread_kill.c:44 (discriminator 1)
#59 __GI_raise at ./signal/../sysdeps/posix/raise.c:27
#60 __GI_abort at ./stdlib/./stdlib/abort.c:81
#61 _nl_load_domain at ./intl/./intl/loadmsgcat.c:1177
#62 __assert_fail in /lib/x86_64-linux-gnu/libc.so.6
#63 objectpositioning::SwEnvironmentOfAnchoredObject::GetVertEnvironmentLayoutFrame(SwFrame const&) const at /home/lo/Dev/LO1/sw/source/core/objectpositioning/environmentofanchoredobject.cxx:94
#64 objectpositioning::SwToContentAnchoredObjectPosition::CalcPosition() at /home/lo/Dev/LO1/sw/source/core/objectpositioning/tocntntanchoredobjectposition.cxx:287 (discriminator 1)
#65 SwFlyAtContentFrame::MakeObjPos() at /home/lo/Dev/LO1/sw/source/core/layout/flycnt.cxx:1524
#66 SwFlyFreeFrame::MakeAll(OutputDevice*) at /home/lo/Dev/LO1/sw/source/core/layout/flylay.cxx:223
#67 SwFlyAtContentFrame::MakeAll(OutputDevice*) at /home/lo/Dev/LO1/sw/source/core/layout/flycnt.cxx:416
#68 SwFrame::PrepareMake(OutputDevice*) at /home/lo/Dev/LO1/sw/source/core/layout/calcmove.cxx:397
#69 SwFrame::Calc(OutputDevice*) const at /home/lo/Dev/LO1/sw/source/core/layout/trvlfrm.cxx:1860
#70 SwFlyFrame::Calc(OutputDevice*) const at /home/lo/Dev/LO1/sw/source/core/layout/fly.cxx:3439
#71 SwFlyFrame::GetModelPositionForViewPoint(SwPosition*, Point&, SwCursorMoveState*, bool) const at /home/lo/Dev/LO1/sw/source/core/layout/trvlfrm.cxx:568
#72 (anonymous namespace)::lcl_GetModelPositionForViewPoint_Objects(SwPageFrame const*, bool, SwPosition*, Point const&, SwCursorMoveState*) at /home/lo/Dev/LO1/sw/source/core/layout/trvlfrm.cxx:86 (discriminator 4)
#73 SwPageFrame::GetModelPositionForViewPoint(SwPosition*, Point&, SwCursorMoveState*, bool) const at /home/lo/Dev/LO1/sw/source/core/layout/trvlfrm.cxx:208 (discriminator 1)
#74 SwRootFrame::GetModelPositionForViewPoint(SwPosition*, Point&, SwCursorMoveState*, bool) const at /home/lo/Dev/LO1/sw/source/core/layout/trvlfrm.cxx:480
#75 SwCursorShell::GetContentAtPos(Point const&, SwContentAtPos&, bool, SwRect*) at /home/lo/Dev/LO1/sw/source/core/crsr/crstrvl.cxx:1519 (discriminator 2)
#76 SwContentTree::UpdateTracking() at /home/lo/Dev/LO1/sw/source/uibase/utlui/content.cxx:4780
#77 SwContentTree::TimerUpdate(Timer*) at /home/lo/Dev/LO1/sw/source/uibase/utlui/content.cxx:4669
#78 SwContentTree::Notify(SfxBroadcaster&, SfxHint const&) at /home/lo/Dev/LO1/sw/source/uibase/utlui/content.cxx:4048
#79 SfxBroadcaster::Broadcast(SfxHint const&) at /home/lo/Dev/LO1/svl/source/notify/SfxBroadcaster.cxx:39 (discriminator 2)
#80 SwRootFrame::CheckViewLayout(SwViewOption const*, SwRect const*) at /home/lo/Dev/LO1/sw/source/core/layout/pagechg.cxx:2515 (discriminator 3)
#81 SwFrame::AdjustNeighbourhood(long, bool) at /home/lo/Dev/LO1/sw/source/core/layout/wsfrm.cxx:1819
#82 SwLayoutFrame::ShrinkFrame(long, bool, bool) at /home/lo/Dev/LO1/sw/source/core/layout/wsfrm.cxx:3020 (discriminator 1)
#83 SwFrame::Shrink(long, bool, bool) at /home/lo/Dev/LO1/sw/source/core/layout/wsfrm.cxx:1636
#84 SwContentFrame::Cut() at /home/lo/Dev/LO1/sw/source/core/layout/wsfrm.cxx:1390
#85 SwContentNode::DelFrames(SwRootFrame const*) at /home/lo/Dev/LO1/sw/source/core/docnode/node.cxx:1553
#86 SwWrtShell::MakeOutlineContentVisible(unsigned long, bool, bool) [clone .localalias] at /home/lo/Dev/LO1/sw/source/uibase/wrtsh/wrtsh1.cxx:2649 (discriminator 1)
#87 SwWrtShell::InvalidateOutlineContentVisibility() at /home/lo/Dev/LO1/sw/source/uibase/wrtsh/wrtsh1.cxx:2696 (discriminator 2)
#88 SwEditWin::ToggleOutlineContentVisibility(unsigned long, bool) at /home/lo/Dev/LO1/sw/source/uibase/docvw/edtwin.cxx:7136
#89 SwOutlineContentVisibilityWin::MousePressHdl(MouseEvent const&) at /home/lo/Dev/LO1/sw/source/uibase/docvw/OutlineContentVisibilityWin.cxx:234
#90 SwOutlineContentVisibilityWin::LinkStubMousePressHdl(void*, MouseEvent const&) at /home/lo/Dev/LO1/sw/source/uibase/docvw/OutlineContentVisibilityWin.cxx:230
#91 Link<MouseEvent const&, bool>::Call(MouseEvent const&) const at /home/lo/Dev/LO1/include/tools/link.hxx:105 (discriminator 1)
#92 weld::Widget::signal_mouse_press(MouseEvent const&) at /home/lo/Dev/LO1/include/vcl/weld.hxx:111
#93 SalInstanceWidget::HandleMouseEventListener(VclWindowEvent&) at /home/lo/Dev/LO1/vcl/source/app/salvtables.cxx:797
#94 SalInstanceWidget::MouseEventListener(VclWindowEvent&) at /home/lo/Dev/LO1/vcl/source/app/salvtables.cxx:830
#95 SalInstanceWidget::LinkStubMouseEventListener(void*, VclWindowEvent&) at /home/lo/Dev/LO1/vcl/source/app/salvtables.cxx:827
#96 Link<VclWindowEvent&, void>::Call(VclWindowEvent&) const at /home/lo/Dev/LO1/include/tools/link.hxx:105
#97 vcl::Window::CallEventListeners(VclEventId, void*) at /home/lo/Dev/LO1/vcl/source/window/event.cxx:293 (discriminator 2)
#98 vcl::Window::ImplNotifyKeyMouseCommandEventListeners(NotifyEvent&) at /home/lo/Dev/LO1/vcl/source/window/event.cxx:460 (discriminator 1)
#99 ImplHandleMouseEvent(VclPtr<vcl::Window> const&, NotifyEventType, bool, long, long, unsigned long, unsigned short, MouseEventModifiers) at /home/lo/Dev/LO1/vcl/source/window/winproc.cxx:756
#100 ImplHandleSalMouseButtonDown(vcl::Window*, SalMouseEvent const*) at /home/lo/Dev/LO1/vcl/source/window/winproc.cxx:2365 (discriminator 2)
#101 ImplWindowFrameProc(vcl::Window*, SalEvent, void const*) at /home/lo/Dev/LO1/vcl/source/window/winproc.cxx:2703 (discriminator 2)
#102 SalFrame::CallCallback(SalEvent, void const*) const at /home/lo/Dev/LO1/vcl/inc/salframe.hxx:310 (discriminator 2)
#103 X11SalFrame::HandleMouseEvent(_XEvent*) at /home/lo/Dev/LO1/vcl/unx/generic/window/salframe.cxx:2575 (discriminator 1)
#104 X11SalFrame::Dispatch(_XEvent*) at /home/lo/Dev/LO1/vcl/unx/generic/window/salframe.cxx:3642 (discriminator 1)
#105 SalX11Display::Dispatch(_XEvent*) at /home/lo/Dev/LO1/vcl/unx/generic/app/saldisp.cxx:1967
#106 SalX11Display::Yield() at /home/lo/Dev/LO1/vcl/unx/generic/app/saldisp.cxx:1868
#107 DisplayYield(int, void*) at /home/lo/Dev/LO1/vcl/unx/generic/app/saldisp.cxx:318
#108 (anonymous namespace)::YieldEntry::HandleNextEvent() const at /home/lo/Dev/LO1/vcl/unx/generic/app/saldata.cxx:559
#109 SalXLib::Yield(bool, bool) at /home/lo/Dev/LO1/vcl/unx/generic/app/saldata.cxx:752
#110 X11SalInstance::DoYield(bool, bool) at /home/lo/Dev/LO1/vcl/unx/generic/app/salinst.cxx:190
#111 ImplYield(bool, bool) at /home/lo/Dev/LO1/vcl/source/app/svapp.cxx:390
#112 Application::Yield() at /home/lo/Dev/LO1/vcl/source/app/svapp.cxx:493
#113 Application::Execute() at /home/lo/Dev/LO1/vcl/source/app/svapp.cxx:365
#114 desktop::Desktop::Main() at /home/lo/Dev/LO1/desktop/source/app/app.cxx:1684
#115 ImplSVMain() at /home/lo/Dev/LO1/vcl/source/app/svmain.cxx:230 (discriminator 1)
#116 SVMain() at /home/lo/Dev/LO1/vcl/source/app/svmain.cxx:249
#117 soffice_main at /home/lo/Dev/LO1/desktop/source/app/sofficemain.cxx:122
#118 sal_main at /home/lo/Dev/LO1/desktop/source/app/main.c:51
#119 main at /home/lo/Dev/LO1/desktop/source/app/main.c:49 (discriminator 1)
#120 __libc_start_call_main at ./csu/../sysdeps/x86/libc-start.c:74
#121 call_init at ./csu/../csu/libc-start.c:128
#122 _start in ./soffice.bin
Comment 8 Jim Raykowski 2025-09-28 07:03:35 UTC
Proposed patch to avoid the crash:
https://gerrit.libreoffice.org/c/core/+/191576
Comment 9 Jim Raykowski 2025-09-29 01:01:49 UTC
I noticed that without installing the proposed patch the crash does not happen when the Navigator is open by first using the Navigator to go to the Warps outline paragraph by double clicking on the Warps entry in the Headings or pressing the Enter key or using the context menu "Go to" item when the Warps entry is selected. This moves the Warps paragraph to the top of the view. After that clicking on the fold button does not crash for me.

Note: For gtk3, double click to the left of the Warps entry text in the Headings to "Go to" the Warps paragraph in the view or use the Enter key or context menu item.
Comment 10 Commit Notification 2025-10-01 03:46:15 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c2ad58945c22bf7c8e77c70fc66af1faf998ac54

tdf#167405 Fix outline folding crash

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2025-10-01 08:24:48 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/dd72fd35bbe35798026f2f22189e34e57cf6d65c

tdf#167405 Fix outline folding crash

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2025-10-01 08:39:52 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/2cea04e22569ff5f98b964c32b04f5e983e1a82f

tdf#167405 Fix outline folding crash

It will be available in 25.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2025-10-01 11:08:28 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8-2":

https://git.libreoffice.org/core/commit/b05efae76af464b32079b5fb4902702f20fc36d6

tdf#167405 Fix outline folding crash

It will be available in 25.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.